added navbar section

--- a/index.html
+++ b/index.html
@@ -15,13 +15,35 @@
 </head>
 <body>
     <header>
+        <marquee class="body-container marquee">This is a kid's Zone school.... We are aviable 24/7.... If any query contact us +880 XXXX.....Thanks</marquee>	
 
+        <nav class="nav-bar body-container">
+			<!-- nav start -->
+			<div class="logo">
+				<img src="./assets/logo.png" />
+				<h1>Kid's Zone</h1>
+			</div>
+			<!-- nav middle -->
+			<div class="nav-link">
+				<a>Home</a>
+				<a>About</a>
+				<a>Facilities</a>
+				<a>Admission</a>
+			</div>
+			<!-- nav end -->
+			<div class="nav-end">
+				<button class="button">Contact</button>
+				<p>
+					<img src="./assets/bars.png">
+				</p>
+			</div>
+		</nav>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
