--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <marquee class="body-container marquee">This is a kid's Zone school.... We are aviable 24/7.... If any query contact us +880 XXXX.....Thanks</marquee>	
-
+        <!-- navbar section -->
         <nav class="nav-bar body-container">
 			<!-- nav start -->
 			<div class="logo">
@@ -38,9 +38,85 @@
 				</p>
 			</div>
 		</nav>
+
+        <!-- Banner section -->
+         <div class="banner-container body-container">
+	<!-- content -->
+	<div class="banner-content">
+		<h1 class="banner-title">
+			<span>Empowering</span> <br/>
+			<span>students from small <br/> age</span>
+			<span>towards vision</span>
+		</h1>
+		<p>With the courage, Confidence, Creativity and Compassion to make their UniContribution in a Diverse and Dynamic World.
+		</p>
+		<button class="button">Enroll Now</button>
+	</div>
+	<!-- image -->
+	<div>
+		<img class="bannar-image" src="./assets/hero-kids.png">
+	</div>
+</div>
     </header>
     <main>
+        <!-- curriculum--section -->
+<section class="curriculum-section">
+	<div class="curriculum body-container">
+		<h1 class="title">Standard Curriculum</h1>
 
+		<div class="curriculum-card-container">
+			<!-- card-1 -->
+			<div class="curriculum-card curriculum-card-1">
+				<div><img src="./assets/kinder.png" alt=""></div>
+				<div>
+					<h3>Kinder (3-6) Years</h3>
+					<p>Cum sociis natoque penatibus et magnis
+						dis parturient montes, nascetur ridiculus
+						mu sdis parturient
+					</p>
+					<a class="curriculum-btn-1 " href="">Read More</a>
+
+				</div>
+			</div>
+			<div class="curriculum-card curriculum-card-2">
+				<div><img src="./assets/elementary.png" alt=""></div>
+				<div>
+					<h3>Elementary School</h3>
+					<p>Cum sociis natoque penatibus et magnis
+						dis parturient montes, nascetur ridiculus
+						mu sdis parturient
+					</p>
+					<a class="curriculum-btn-2" href="">Read More</a>
+
+				</div>
+			</div>
+			<div class="curriculum-card curriculum-card-3">
+				<div><img src="./assets/middle.png" alt=""></div>
+				<div>
+					<h3>Middle (10-16) Years</h3>
+					<p>Cum sociis natoque penatibus et magnis
+						dis parturient montes, nascetur ridiculus
+						mu sdis parturient
+					</p>
+					<a class="curriculum-btn-3" href="">Read More</a>
+
+				</div>
+			</div>
+		</div>
+
+		<div class="arror-button-continer">
+			<div >
+				<button class="arror-button">
+					<img src="../assets/arrow-left.png">
+				</button>
+				<button class="arror-button">
+					<img src="../assets/arrow-right.png">
+				</button>
+			</div>
+		</div>
+
+	</div>
+</section>
     </main>
     <footer>
 
