--- a/index.html
+++ b/index.html
@@ -196,7 +196,37 @@
 </section>
     </main>
     <footer>
+		<section class="body-container footer-content">
+		<div class="footer-start">
+			<div>
+				<img src="./assets/logo.png">
+				<h1>Kid's<br/> Zone</h1>
+			</div>
+			<p>
+				Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.
+			</p>
+		</div>
 
+		<div class="footer-texts">
+			<h3>About School</h3>
+			<a href="">Home</a>
+			<a href="">About</a>
+			<a href="">Facilities</a>
+			<a href="">Admission</a>
+		</div>
+
+		<div class="footer-end">
+			<h3>Keep In Touch</h3>
+			<div>
+				<img src="./assets/fb.png">
+				<img src="./assets/dribble.png">
+				<img src="./assets/twitter.png">
+				<img src="./assets/google+.png">
+			</div>
+			
+		</div>
+
+	</section>
     </footer>
 </body>
 </html>
